Rename service access references file

--- a/01_gt_health_service_access/references/service-access.bib
+++ b/01_gt_health_service_access/references/service-access.bib
@@ -611,6 +611,17 @@ and Ross-Degnan, Dennis},
   Url                      = {http://www.sciencedirect.com/science/article/pii/S0266613807000927}
 }
 
+@Manual{equip2,
+  Title                    = {Educational Quality Improvement Program: Nine years of experience in education policy, systems, and
+management.},
+  Author                   = {Anne Smiley},
+  Organization             = {USAID},
+  Year                     = {2012},
+
+  Owner                    = {oscar},
+  Timestamp                = {2017.03.31}
+}
+
 @Article{sorichetta_high-resolution_2015,
   Title                    = {High-resolution gridded population datasets for {Latin} {America} and the {Caribbean} in 2010, 2015, and 2020},
   Author                   = {Sorichetta, Alessandro and Hornby, Graeme M. and Stevens, Forrest R. and Gaughan, Andrea E. and Linard, Catherine and Tatem, Andrew J.},
@@ -656,6 +667,18 @@ and Ross-Degnan, Dennis},
   Publisher                = {Blackwell Publishing Ltd},
   Timestamp                = {2017.02.14},
   Url                      = {http://dx.doi.org/10.1111/j.1365-3156.1996.tb00022.x}
+}
+
+@Electronic{worldbank-gt,
+  Title                    = {Guatemala: Country profile},
+  Author                   = {{The World Bank}},
+  Month                    = {09},
+  Organization             = {The World Bank},
+  Url                      = {http://www.worldbank.org/en/country/guatemala/overview},
+  Year                     = {2017},
+
+  Owner                    = {oscar},
+  Timestamp                = {2017.03.31}
 }
 
 @Article{van1997utilisation,
